tests/sylt_std/as_float_faulty.sy
start :: fn do
    as_float("a")
end
// error: $Missmatch { .. }
